_sass/header.scss
.header {
  background-color: $backgroundColor;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
  height: 100px;
  box-sizing: content-box;

  @media only screen and (max-width: 41rem) {
    height: 60px;
  }

  &.scrolled {
    border-bottom: 2px solid $primaryColor;
  }

  &__content {
    display: flex;
    height: 100%;
    max-width: 1700px;
    align-items: center;
    padding: 0 24px;
  }

  .logo-container {
    align-items: center;

    .logo {
      position: relative;
      text-decoration: none;

      p {
        color: $textColor;
        font-weight: 500;
        margin: 0;
        font-size: 28px;
      }

      span {
        color: transparent;
      }

      .logo-plain {
        opacity: 1;
        letter-spacing: normal;
        transition: all 2s ease;

        @media only screen and (max-width: 600px) {
          opacity: 0;
          letter-spacing: -19px;
        }
      }

      .logo-green {
        color: $primaryColor;
        position: absolute;
        top: 0;

        span {
          transition: all 2s ease;
          width: 17px;
          display: inline-block;

          @media only screen and (max-width: 600px) {
            width: 0px;
          }
        }
      }
    }

    &.scrolled {
      .logo-green {
        span {
          width: 0px;
        }
      }

      .logo-plain {
        opacity: 0;
        letter-spacing: -19px;
        transition: all 2s ease;
      }
    }
  }

  .button-container {
    text-align: right;
    display: none;
    gap: 16px;
    justify-content: flex-end;
  }
}

